assets/css/style.css
/* ... */
#subscribe-btn-resources button {
    background-color: rgb(71, 156, 224);
    border: none;
    border-radius: 30px;
    height: 50px;
    padding: 0;
}

#subscribe-btn-resources button:hover {
    background-color: rgb(59, 158, 59);
}

.useful-links-resources {
    text-align: center;
    background-color: white;
    padding-top: 15px;
}

.useful-links-resources h2 {
    color: #479ce0;
    font-size: 35px;
    padding-bottom: 15px;
}

/*-----------------------------------------Media Queries for Resources Page---*/

/* Large screen size - text content and subscribe button re-sized */

@media screen and (min-width: 1500px) and (max-width: 2560px) {
    article h4 {
        font-size: 48px;
        }

    #subscribe-btn-resources button {
        width: 500px;
        height: 100px;
        border-radius: 50px;
        }

    #subscribe-btn-resources button span {
        font-size: 40px;
        }
    }

/* Large mobile screen - subsribe button centred */

    @media screen and (max-width: 425px) {
        #subscribe-btn-resources { 
        text-align: center;
        }
    }

/*------------------------------Media Queries for About and Resources Pages---*/

/* Large screen size - header, content, bullet points and external link images re-sized */

@media screen and (min-width: 1500px) and (max-width: 2560px) {
    h2 {
        font-size: 48px;
        }

    p, ul, #resources-link, #resources-link2 {
        font-size: 32px;
        }

    .charity-logo img {
            width: 500px;
        } 
    }

/* Tablet screen - external images re-sized */

    @media screen and (max-width: 768px) {
        .charity-logo img {
            width: 200px;
        }
    }

/* Medium mobile screen - external images re-sized */
    
    @media screen and (max-width: 425px) {
    .charity-logo img {
        width: 280px;
        padding-bottom: 10px;
        }
    
    #nas-logo {
        margin-bottom: 30px;
        }
    }

/* Small mobile screen - external images re-sized */

    @media screen and (max-width: 320px) {
    
    .charity-logo img {
        width: 250px;
        padding-right: 15px;
        padding-bottom: 10px;
        }

    #nas-logo {
        margin-bottom: 30px;
        }
    }

/*---------------------------------------------Subscribe Page---*/

.bg-change-form {
    background-color: #274c77;
    color: #e7ecef;
    text-align: left;
}

#form-header {
    text-align: center;
    font-size: 18px;
}

#form-border {
    width: 100%;
    height: 100%;
    border-radius: 10%;
    color: #274c77;
    background-color: #e7ecef;
    padding: 20px; 
}

#subscribe-for-free {
    font-size: 18px;
}

.label {
    font-size: 18px;
}

#subscribe-btn {
   padding-top: 20px;
   text-align: center;
}

#subscribe-btn span {  
    text-transform: uppercase; 
    font-size: 18px;
    color: #e7ecef
} 

#subscribe-btn button {
    background-color: #274c77;
    border: none;
    border-radius: 30px;
}

#subscribe-btn button:hover {
    background-color:rgb(59, 158, 59);
}

#header-here {
    text-align: left;
}

.hr-color-subscribe {
    color: #479ce0;
}

#thank-you-image {
    background: url("../images/thank-you-image.jpg") no-repeat center center;  
    height: 200px; 
    width: 100%;
    background-size: cover; 
}

.useful-links-subscribe {
    text-align: center;
    background-color: white;
    padding-top: 15px;
}

.useful-links-subscribe h2 {
    color: #479ce0;
    font-size: 35px;
    padding-bottom: 15px;
}

/*---------------------------------------------Media Queries for Subscribe---*/

@media screen and (min-width: 1500px) and (max-width: 2560px) {
    .useful-links-about h2 {
        font-size: 60px;
        padding-left: 20px;
        }
    }

@media screen and (min-width: 500px) {
    #form-border {
        width: 400px;
    }
}


/*---------------------------------------------Footer---*/
footer {
    position: relative;
    margin: 10px;
    border: 5px
}

footer .icons, p {
    text-align: center;
    color: #274c77;
}

.icons i {
    color: #479ce0;
}

.icons i:hover{
    color: #274c77;
}

a {
    font-size: 20px;
    padding: 20px;
}

.copyright {
    margin-top: 5px;
}

/*--------------------------------------Media Queries for Footer---*/

@media screen and (min-width: 2500px) {
    a {
        font-size: 40px;
        padding: 40px;
    }
}

